[gd_scene load_steps=2 format=3 uid="uid://hud001"]

[ext_resource type="Script" uid="uid://birenej6wlxpk" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Panel" type="Panel" parent="."]
offset_left = 15.0
offset_top = 19.0
offset_right = 315.0
offset_bottom = 159.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -3.0
offset_right = -14.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="DayLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Day 1"

[node name="PhaseLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Phase: BAKING"

[node name="CashLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Cash: $200.00"

[node name="TimeLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Time: 00:00"

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="StartBusinessButton" type="Button" parent="Panel/VBox/ButtonContainer"]
layout_mode = 2
text = "Open Shop"

[node name="EndBusinessButton" type="Button" parent="Panel/VBox/ButtonContainer"]
visible = false
layout_mode = 2
text = "Close Shop"
